# networking-testbed

./: .babelrc  package-lock.json  package.json  tsconfig.json
bundler/: webpack.common.js  webpack.dev.js
src/: index.html  index.tsx
src/simulation/: ClientSimulationComponent.tsx  ClientSimulationStats.tsx  SimulationComponent.tsx  SimulationHandler.ts  SimulationHandlerComponent.tsx  createSimulationCanvas.ts
wasm/: .npmignore  .npmrc  CMakeLists.txt  build.sh  clean.sh  conanfile.txt  index.d.ts  index.hpp  index.idl  index.js  onload.js  preload.js  quick.sh
wasm/config/: rig.json
wasm/scripts/: asyncify.ts
wasm/src/: CMakeLists.txt  ClientSimulationController.cpp  ClientSimulationController.hpp  SimulatedNetwork.cpp  SimulatedNetwork.hpp  SimulationController.cpp  SimulationController.hpp  VisualInterface.hpp
wasm/src/game/: CMakeLists.txt  EntityWorldInterface.hpp  GameEntity.cpp  GameEntity.hpp  GameInput.cpp  GameInput.hpp  GameWorld.cpp  GameWorld.hpp  index.hpp
wasm/src/game/entities/: BulletEntity.cpp  BulletEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp
wasm/src/network/: CMakeLists.txt  IEntityController.hpp  INetwork.hpp  INetworkEntity.hpp  INetworkWorldController.hpp  IPhysicsWorld.hpp  index.hpp
wasm/src/network/client/: ClientController.hpp  ClientEntity.hpp  EntityTimeline.hpp  Reconciler.hpp
wasm/src/network/packets/: EntityLifecyclePacket.hpp  Packet.hpp  PlayerInputPacket.hpp  WorldStatePacket.hpp
wasm/src/network/packets/input/: IncomingEntityLifecyclePacket.hpp  IncomingNetworkPacket.cpp  IncomingNetworkPacket.hpp  IncomingPlayerInputPacket.hpp  IncomingWorldStatePacket.hpp
wasm/src/network/packets/output/: OutgoingEntityLifecyclePacket.hpp  OutgoingNetworkPacket.cpp  OutgoingNetworkPacket.hpp  OutgoingPlayerInputPacket.hpp  OutgoingWorldStatePacket.hpp
wasm/src/network/server/: ClientConnection.hpp  ServerController.hpp  ServerEntity.hpp  ServerEntityHistory.hpp
wasm/src/network/server/inputBuffer/: BufferSizeCalculator.cpp  BufferSizeCalculator.hpp  DropRateCalculator.cpp  DropRateCalculator.hpp  InputBuffer.hpp
wasm/src/network/util/: Compression.cpp  Compression.hpp
